--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>mapr</groupId>
@@ -16,7 +17,7 @@
         <scala.tools.version>2.11</scala.tools.version>
         <scala.version>2.11.8</scala.version>
         <spark.version>2.0.2</spark.version>
-   
+
     </properties>
 
     <repositories>
@@ -40,8 +41,6 @@
     </repositories>
 
     <dependencies>
-    
-
 
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -57,16 +56,39 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_${scala.tools.version}</artifactId>
-            <version>${spark.version}</version>	
+            <version>${spark.version}</version>
         </dependency>
-		
-           <dependency>
+        <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-mllib_${scala.tools.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>
 
-
+        <!-- Test -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.specs2</groupId>
+            <artifactId>specs2-core_${scala.tools.version}</artifactId>
+            <version>3.7.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.specs2</groupId>
+            <artifactId>specs2-junit_${scala.tools.version}</artifactId>
+            <version>3.7.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_${scala.tools.version}</artifactId>
+            <version>3.0.0-M15</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
@@ -75,12 +97,12 @@
         <testSourceDirectory>src/test/scala</testSourceDirectory>
         <plugins>
             <plugin>
-                <groupId>org.scala-tools</groupId>						
+                <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
-                <version>2.15.2</version> 							
-                <executions>									
-                    <execution>									
-                        <goals>										
+                <version>2.15.2</version>
+                <executions>
+                    <execution>
+                        <goals>
                             <goal>compile</goal>
                         </goals>
                     </execution>
